[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/pickups/energy.png" type="Texture" id=1]
[ext_resource path="res://scripts/pickupScripts/energy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/pickupsSfx/collectEnergy.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/sfxScripts/collectPickupSfx.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/lighting & glow/lightFade.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flowUpDown"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1, 2 ),
"transitions": PoolRealArray( 0.35, 0.35, 0.35, 0.35, 0.353554 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 4 ), Vector2( 0, -5 ), Vector2( 0, -4 ), Vector2( 0, 5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "flowUpDown"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.1, 2 ),
"transitions": PoolRealArray( 0.35, 0.35, 0.35, 0.35, 0.353554 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 4 ), Vector2( 0, -5 ), Vector2( 0, -4 ), Vector2( 0, 5 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 34.0

[node name="energy" type="Area2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="glowSprite" type="Sprite" parent="."]
modulate = Color( 1, 0.756863, 0.768627, 0.811765 )
scale = Vector2( 0.0552419, 0.0951935 )
texture = ExtResource( 5 )

[node name="animationPlayer" type="AnimationPlayer" parent="glowSprite"]
autoplay = "flowUpDown"
anims/RESET = SubResource( 2 )
anims/flowUpDown = SubResource( 3 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.0962032, 0.0962032 )
texture = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="sprite"]
autoplay = "flowUpDown"
anims/RESET = SubResource( 4 )
anims/flowUpDown = SubResource( 5 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="collectEnergySfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"
script = ExtResource( 4 )

[node name="selfDestroyTimer" type="Timer" parent="collectEnergySfx"]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_energy_body_entered"]
[connection signal="timeout" from="collectEnergySfx/selfDestroyTimer" to="collectEnergySfx" method="_on_selfDestroyTimer_timeout"]
